--- a/overlay/packages/apps/Settings/res/values/awaken_strings.xml
+++ b/overlay/packages/apps/Settings/res/values/awaken_strings.xml
@@ -12,5 +12,5 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="awaken_maintainer">COSMOS | AURORA</string>
+    <string name="awaken_maintainer">COSMOS | Biswajit</string>
 </resources>
